// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChapterSummaryPrompt golden > renders the generic variant 1`] = `
{
  "system": "한국어 장편 소설의 한 장(chapter) 본문을 3~5문장으로 요약하는 도우미다.
핵심 사건, 인물의 변화, 다음 장으로 이어지는 갈등을 중심으로 압축하라.
설명이나 머리말 없이 요약문만 출력하라.",
  "user": "[장 제목]
3장 폭우

[본문]
비가 쏟아졌다.

엘리아는 창가에 서 있었다.",
}
`;

exports[`ChapterSummaryPrompt golden > renders the rich variant 1`] = `
{
  "system": "한국어 장편 소설의 한 장(chapter) 본문을 3~5문장으로 요약하는 도우미다.
핵심 사건, 인물의 변화, 다음 장으로 이어지는 갈등을 중심으로 압축하라.
설명이나 머리말 없이 요약문만 출력하라.",
  "user": "[장 제목]
3장 폭우

[본문]
비가 쏟아졌다.

엘리아는 창가에 서 있었다.",
}
`;

exports[`ChapterSummaryPrompt golden > renders the xs variant 1`] = `
{
  "system": "이 장 본문을 3~5문장으로 요약하라. 요약문만 출력하라.",
  "user": "[장 제목]
3장 폭우

[본문]
비가 쏟아졌다.

엘리아는 창가에 서 있었다.",
}
`;
